# rustfit

./: .dockerignore  .env.sample  Cargo.toml  Dockerfile  README.md  fly.toml  rustfit.sqlite
migrations/: 20231025205412_accounts_table.up.sql  20231103212919_account_session_table.down.sql  20231103212919_account_session_table.up.sql
src/: config.rs  lib.rs  main.rs
src/handlers/: account.rs
src/http/: accounts.rs  api_context.rs  error.rs  health.rs  mod.rs  server.rs
src/models/: account.rs  account_session.rs  mod.rs
